[gd_scene load_steps=15 format=3 uid="uid://dips6v1kau1h1"]

[ext_resource type="PackedScene" uid="uid://bprxkhnntmgid" path="res://Scenes/prefabs/enemySM.tscn" id="1_s6v2a"]
[ext_resource type="Texture2D" uid="uid://crqjde012ej3h" path="res://assets/slime/Spritesheet.png" id="2_6a2t2"]
[ext_resource type="PackedScene" uid="uid://qrat08xsvua4" path="res://Scenes/prefabs/killzone.tscn" id="2_guvg1"]
[ext_resource type="Script" path="res://code/SM/Enemies/Slime/slime.gd" id="2_wgq8c"]

[sub_resource type="Animation" id="Animation_a3522"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6wb36"]
resource_name = "awake"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_cwhxb"]
resource_name = "damaged"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 6]
}

[sub_resource type="Animation" id="Animation_w01xw"]
resource_name = "dormant"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_uvokv"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_02uju"]
_data = {
"RESET": SubResource("Animation_a3522"),
"awake": SubResource("Animation_6wb36"),
"damaged": SubResource("Animation_cwhxb"),
"dormant": SubResource("Animation_w01xw"),
"idle": SubResource("Animation_uvokv")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_typud"]
size = Vector2(8, 13)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_maewc"]
radius = 9.0
height = 226.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5jfg"]
size = Vector2(16, 30)

[sub_resource type="GDScript" id="GDScript_3gur3"]
script/source = "extends CollisionShape2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass

func isEnemyHitBox():
	pass
"

[node name="Slime" type="CharacterBody2D"]
script = ExtResource("2_wgq8c")

[node name="SM" parent="." instance=ExtResource("1_s6v2a")]
starting_state_name = "Dormant"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_02uju")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("2_6a2t2")
hframes = 3
vframes = 3

[node name="RCright" type="RayCast2D" parent="."]
position = Vector2(0, -12)
target_position = Vector2(8, 0)
collide_with_areas = true
collide_with_bodies = false

[node name="RCleft" type="RayCast2D" parent="."]
position = Vector2(0, -12)
rotation = 1.5708
target_position = Vector2(0, 8)
collide_with_areas = true
collide_with_bodies = false

[node name="Killzone" parent="." instance=ExtResource("2_guvg1")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_typud")

[node name="spawnArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="spawnArea"]
position = Vector2(0, -10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_maewc")

[node name="HitboxArea" type="Area2D" parent="."]

[node name="HB" type="CollisionShape2D" parent="HitboxArea"]
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_j5jfg")
script = SubResource("GDScript_3gur3")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_shape_entered" from="spawnArea" to="." method="_on_spawn_area_body_shape_entered"]
